# flipfilter

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  dither.fs  main.c
